text field align fix

--- a/src/css/sell/sell.css
+++ b/src/css/sell/sell.css
@@ -31,7 +31,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     background-color: white;
     padding: 2rem;
     border-radius: 10px;
@@ -53,6 +53,7 @@
 .sell-page-input-textfield{
     margin: 0 1rem !important;
     background-color: #F2F4F8 ;
+    width: 14rem ;
 }
 
 .sell-page-form-col2{
